--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3221,7 +3221,7 @@
         flex-direction: column;
 
         .text {
-          display: none;
+          display: none!important;
         }
       }
     }
