--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1,6 +1,11 @@
 @import "variables.less";
 @import "mixins.less"; // Extra gridbox styling for Bootstrap templates (prefixed with class "ku-bs").
 // Extends ku-gridboxes.less which was build for old Obvius page templates.
+
+// Extends ku-gridboxes.less which was build for old Obvius page templates.
+@media only screen and (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+
+}
 @media only screen and (min-width: 681px) and (max-width: @screen-sm-min) {
   // Front page / no menu
   // 2-1-1 columns and 1-1-2 columns
