--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3685,6 +3685,10 @@
   }
   //
   // All single, 2/3 and double comlumn boxes with image
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3,
   .double-column [class*=column],
   .one-two-column .column1,
   .triple-column [class*=column],
