--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3646,20 +3646,44 @@
       }
     }
   }
-  // Front page/ no left menu
-  // one-one-two columns
-  .one-one-two-column .column3,
-  .two-one-one-column .column1 {
+  // Front page / no menu
+  // 2-1-1 columns and 1-1-2 columns
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
     .size2,
     .size3 {
-      // Videos
-      &.with-iframe {
+      &.with-img {
+        flex-direction: row;
+
+        .box1 {
+          flex: 1;
+
+          .header {
+            background: 0 0!important;
+            position: relative;
+            bottom: auto;
+            left: auto;
+          }
+
+          .text {
+            display: block;
+          }
+        }
+
         .box2 {
-          flex: 0 1 49%;
+          flex: 0 1 235px;
+
+          img {
+            max-width: none!important;
+            max-height: 108%!important;
+          }
         }
       }
     }
   }
+
 }
 @media only screen and (min-width: 600px) and (max-width: 680px) {
   &.size1 {
@@ -3692,7 +3716,8 @@
   .double-column [class*=column],
   .one-two-column .column1,
   .triple-column [class*=column],
-  .two-one-column .column2 {
+  .two-one-column .column2,
+  .one-three-column .column1 {
     .size2,
     .size3 {
       &.with-img {
