--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3637,16 +3637,15 @@
   }
   //
   // All single, 2/3 and double comlumn boxes with image
-  // .one-one-two-column .column1,
-  // .one-one-two-column .column2,
-  // .two-one-one-column .column2,
-  // .two-one-one-column .column3,
-  // .double-column [class*=column],
-  // .one-two-column .column1,
-  // .triple-column [class*=column],
-  // .two-one-column .column2,
-  // .one-three-column .column1 {
-    .gcrow .gccolumn .gridbox {
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3,
+  .double-column [class*=column],
+  .one-two-column .column1,
+  .triple-column [class*=column],
+  .two-one-column .column2,
+  .one-three-column .column1 {
     .size2,
     .size3 {
       &.with-img {
