--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -16,10 +16,11 @@
 @media only screen and (min-width: 681px) and (max-width: @screen-sm-min) {
   // Front page / no menu
   // 2-1-1 columns and 1-1-2 columns
-  .one-one-two-column .column1,
-  .one-one-two-column .column2,
-  .two-one-one-column .column2,
-  .two-one-one-column .column3 {
+  // .one-one-two-column .column1,
+  // .one-one-two-column .column2,
+  // .two-one-one-column .column2,
+  // .two-one-one-column .column3 {
+  .gcrow .gccolumn .gridbox {
     .size2,
     .size3 {
       &.with-img {
