--- a/docs/_includes/components/panels.html
+++ b/docs/_includes/components/panels.html
@@ -8,14 +8,14 @@
   <div class="bs-example" data-example-id="simple-panel">
     <div class="panel panel-default">
       <div class="panel-body">
-        Basic panel example
+        <p>Basic panel example</p>
       </div>
     </div>
   </div>
 {% highlight html %}
 <div class="panel panel-default">
   <div class="panel-body">
-    Basic panel example
+    <p>Basic panel example</p>
   </div>
 </div>
 {% endhighlight %}
@@ -27,7 +27,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Panel heading without title</div>
       <div class="panel-body">
-        Panel content
+        <p>Panel content<p>
       </div>
     </div>
     <div class="panel panel-default">
@@ -35,7 +35,7 @@
         <h2 class="panel-title">Panel title</h2>
       </div>
       <div class="panel-body">
-        Panel content
+        <p>Panel content<p>
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">Panel heading without title</div>
   <div class="panel-body">
-    Panel content
+    <p>Panel content<p>
   </div>
 </div>
 
@@ -52,7 +52,7 @@
     <h2 class="panel-title">Panel title</h2>
   </div>
   <div class="panel-body">
-    Panel content
+    <p>Panel content<p>
   </div>
 </div>
 {% endhighlight %}
@@ -62,7 +62,7 @@
   <div class="bs-example" data-example-id="panel-with-footer">
     <div class="panel panel-default">
       <div class="panel-body">
-        Panel content
+        <p>Panel content<p>
       </div>
       <div class="panel-footer">Panel footer</div>
     </div>
@@ -70,7 +70,7 @@
 {% highlight html %}
 <div class="panel panel-default">
   <div class="panel-body">
-    Panel content
+    <p>Panel content<p>
   </div>
   <div class="panel-footer">Panel footer</div>
 </div>
@@ -133,7 +133,9 @@
   <div class="bs-example" data-example-id="table-within-panel">
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Panel heading</div>
+      <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
       <div class="panel-body">
         <p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
@@ -174,7 +176,9 @@
 {% highlight html %}
 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading">Panel heading</div>
+  <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
   <div class="panel-body">
     <p>...</p>
   </div>
@@ -190,7 +194,9 @@
   <div class="bs-example" data-example-id="panel-without-body-with-table">
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Panel heading</div>
+      <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
 
       <!-- Table -->
       <table class="table">
@@ -228,7 +234,9 @@
 {% highlight html %}
 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading">Panel heading</div>
+  <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
 
   <!-- Table -->
   <table class="table">
@@ -243,7 +251,9 @@
   <div class="bs-example" data-example-id="panel-with-list-group">
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Panel heading</div>
+      <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
       <div class="panel-body">
         <p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
@@ -261,7 +271,9 @@
 {% highlight html %}
 <div class="panel panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading">Panel heading</div>
+  <div class="panel-heading">
+    <h2 class="panel-title">Panel title</h2>
+  </div>
   <div class="panel-body">
     <p>...</p>
   </div>
