--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -130,7 +130,7 @@
 <script src="../../custom/ku-mobile-menu.js"></script>
 <script src="../../assets/js/ku-global-search/search.js"></script>
 {% if page.slug != "examples" %}
-<script src="../../assets/js/docs.min.js"></script>
+<script src="https://nanna-dk.github.io/ku.dk-bootstrap/assets/js/docs.min.js"></script>
 {% endif %}
 {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
