--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -204,7 +204,7 @@ nav {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: @ku-red;
+  background: #a1a1a1;
   color: @white-color;
   z-index: 1030;
   overflow: hidden;
@@ -213,18 +213,15 @@ nav {
   justify-content: center;
   align-items: center;
 
-  .icon-arrow {
-    .icon;
-    display: inherit;
+  .glyphicon-menu-up {
+    .glyphicon;
     width: 100%;
-    padding-left: 1px;
     text-align: center;
 
     &:before {
       display: block;
       margin: 0 auto;
       font-size: 18px;
-      transform: rotate(-90deg);
     }
   }
 
