--- a/less/variables.less
+++ b/less/variables.less
@@ -14,8 +14,8 @@
 @gray-light:             #777;
 @gray-666:               #666;
 @gray-888:               #888;
-@grey-999:               #999;
-@grey-ddd:               #ddd;
+@gray-999:               #999;
+@gray-ddd:               #ddd;
 @gray-lighter:           #eee;
 
 @semi-white:            #f1f1f1;
@@ -265,7 +265,7 @@
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            @grey-ddd;
+@table-border-color:            @gray-ddd;
 
 // KU specific
 @tr-highlight-bg: #e0e0e0;
@@ -278,11 +278,11 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              @gray-dark;
-@btn-default-bg:                 @white-color;
+@btn-default-bg:                 #f4f4f4;
 @btn-default-border:             #b6b6b6;
 
 @btn-primary-color:              @gray-dark;
-@btn-primary-bg:                 @white-color;
+@btn-primary-bg:                 #fbfbfb;
 @btn-primary-border:             #b6b6b6;
 
 @btn-success-color:              #fff;
@@ -301,7 +301,7 @@
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
-@btn-link-disabled-color:        @gray-888;
+@btn-link-disabled-color:        @gray-999;
 
 // Allows for customizing button radius independently from global border radius
 @btn-border-radius-base:         @border-radius-base;
@@ -523,9 +523,9 @@
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           @grey-ddd;
+@navbar-default-toggle-hover-bg:           @gray-ddd;
 @navbar-default-toggle-icon-bar-bg:        #888;
-@navbar-default-toggle-border-color:       @grey-ddd;
+@navbar-default-toggle-border-color:       @gray-ddd;
 
 
 //=== Inverted navbar
@@ -563,17 +563,17 @@
 @nav-link-hover-bg:                         @gray-lighter;
 @nav-link-border-radius:                   @border-radius-base;
 
-@nav-disabled-link-color:                   @gray-888;
+@nav-disabled-link-color:                   grey-999;
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
-@nav-tabs-border-color:                     @grey-ddd;
+@nav-tabs-border-color:                     @gray-ddd;
 @nav-tabs-bg-color:                         #f3f3f3;
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             @grey-999;
+@nav-tabs-active-link-hover-bg:             @gray-999;
 @nav-tabs-active-link-hover-color:          @white-color;
-@nav-tabs-active-link-hover-border-color:   @grey-ddd;
+@nav-tabs-active-link-hover-border-color:   @gray-ddd;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
@@ -581,7 +581,7 @@
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
 @nav-pills-bg-color:                        #f3f3f3;
-@nav-pills-active-link-hover-bg:            @grey-999;
+@nav-pills-active-link-hover-bg:            @gray-999;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
 @ku-nav-tabs-and-pills-hover-bg-color:      #e7e7e7;
@@ -605,19 +605,19 @@
 
 @pagination-color:                     #666;
 @pagination-bg:                        @white-color;
-@pagination-border:                    @grey-ddd;
+@pagination-border:                    @gray-ddd;
 
 @pagination-hover-color:               #666;
 @pagination-hover-bg:                  @gray-lighter;
-@pagination-hover-border:              @grey-ddd;
+@pagination-hover-border:              @gray-ddd;
 
 @pagination-active-color:              @white-color;
-@pagination-active-bg:                 @grey-999;
-@pagination-active-border:             @grey-999;
+@pagination-active-bg:                 @gray-999;
+@pagination-active-border:             @gray-999;
 
 @pagination-disabled-color:            @gray-light;
 @pagination-disabled-bg:               #fff;
-@pagination-disabled-border:           @grey-ddd;
+@pagination-disabled-border:           @gray-ddd;
 
 
 //== Pager
@@ -910,7 +910,7 @@
 //** Thumbnail background color
 @thumbnail-bg:                @body-bg;
 //** Thumbnail border color
-@thumbnail-border:            @grey-ddd;
+@thumbnail-border:            @gray-ddd;
 //** Thumbnail border radius
 @thumbnail-border-radius:     @border-radius-base;
 
