--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3823,6 +3823,7 @@
 
         &.text-over {
           .header {
+            background: 0;
             position: relative;
             bottom: auto;
             left: auto;
@@ -4284,6 +4285,8 @@
     }
   }
 
+  .three-one-column .column1,
+  .one-three-column .column2,
   .one-one-two-column .column3,
   .one-two-column .column2,
   .single-column .column1,
