--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -190,6 +190,7 @@ nav {
 .btn-global-search {
   .btn {
     height: @input-height-base; // (base line-height + padding + border)
+    background-color: @white-color;
     background-image: none; // remove gradient from default button
   }
 }
