--- a/less/navbar.less
+++ b/less/navbar.less
@@ -383,7 +383,7 @@
   &.navbar-nav {
     > li {
       > a {
-        padding: 0 8px;
+        padding: 0 7px;
         line-height: @ku-topbar-height;
       }
     }
@@ -702,14 +702,14 @@
       }
       // KU language switcher icons
       &.dansk,
-      &.english {
+      &.engelsk {
         width: 74px;
         padding-right: (@grid-gutter-width / 2);
         display: inline-block;
         background-repeat: no-repeat;
       }
 
-      &.english {
+      &.engelsk {
         background-image: url("https://bootstrap.secure.ku.dk/img/flag-uk.gif");
         background-position: right 8px;
       }
