--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,6 +1,6 @@
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
   <div class="ku-navbar-header">
-    Kommunikation
+    <a href="/">Kommunikation</a>
   </div>
   <nav>
     <ul id="leftmenu" class="nav">
