--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -10,7 +10,7 @@
           <li><a href="#">Job</a></li>
           <li><a href="#">A-Å-index</a></li>
           <li><a href="#">KUnet</a></li>
-          <li><a class="english" href="#">English</a></li>
+          <li><a class="engelsk" href="#">English</a></li>
         </ul>
       </div>
       <a id="hamburger" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
