--- a/less/navbar.less
+++ b/less/navbar.less
@@ -380,6 +380,7 @@
 
 #topbar_menu {
   height: 100%;
+  margin-right: 0;
   &.navbar-nav {
     > li {
       > a {
@@ -703,8 +704,7 @@
       // KU language switcher icons
       &.dansk,
       &.engelsk {
-        width: 74px;
-        padding-right: (@grid-gutter-width / 2);
+        width: 71px;
         display: inline-block;
         background-repeat: no-repeat;
       }
