--- a/less/variables.less
+++ b/less/variables.less
@@ -26,6 +26,8 @@
 @ku-footer-icon-bg:      #757575;
 @ku-footer-icon-size:    28px;
 
+@ku-jump-to-top:        #757474;
+
 // KU specific colors
 
 @ku-red:                #901a1e;
@@ -127,10 +129,10 @@
 @ku-entry-border:       #e8e8e8;
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-success:         #85ae33;
+@brand-info:            #7ea5a8;
+@brand-warning:         #e57002;
+@brand-danger:          #7b161a;
 
 // KU thumbnaiuls size
 @ku-thumbnails-size:    65px;
@@ -571,7 +573,7 @@
 @nav-tabs-bg-color:                         #f3f3f3;
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             @gray-999;
+@nav-tabs-active-link-hover-bg:             @white-color;
 @nav-tabs-active-link-hover-color:          @white-color;
 @nav-tabs-active-link-hover-border-color:   @gray-ddd;
 
