--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -2,7 +2,7 @@
 <nav id="mobileleftmenu"></nav>
 <!-- Footer -->
 <footer id="footer">
-  <div class="container-fluid globalfooter">
+  <div id="globalfooter" class="container-fluid">
     <div class="container">
       <div class="row footercontent" role="menubar">
         <div class="col-xs-3 footercolumn">
