--- a/docs/assets/css/non-responsive/non-responsive.css
+++ b/docs/assets/css/non-responsive/non-responsive.css
@@ -1,3 +1,7 @@
+// Core variables and mixins
+@import "../../variables.less";
+@import "../../mixins.less";
+
 html.non-responsive {
   min-width: 1070px;
   overflow: auto;
@@ -6,6 +10,7 @@ html.non-responsive .container, html.non-responsive main {
   max-width: none !important;
   width: 1070px !important;
 }
+
 html.non-responsive .main-content > .row > .col-sm-12 {
   width: 50% !important;
 }
@@ -89,4 +94,10 @@ html.non-responsive .navbar .navbar-nav .open .dropdown-menu > .disabled > a:hov
 html.non-responsive .navbar .navbar-nav .open .dropdown-menu > .disabled > a:focus {
   color: #999 !important;
   background-color: transparent !important;
+}
+
+html.non-responsive {
+  #globalfooter {
+    background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
+  }
 }
