--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -26,7 +26,7 @@
 // Global footer
 // --------------------------------------------------
 
-.globalfooter {
+#globalfooter {
   position: relative;
   background: @gray-light;
   @media (min-width: @screen-sm-min) {
@@ -251,9 +251,10 @@
     }
   }
 }
+
 @media (max-width: @screen-xs-max) {
   html:not(.non-responsive) {
-    .globalfooter {
+    #globalfooter {
       background: @gray-light;
 
       .container {
@@ -399,12 +400,6 @@
           }
         }
       }
-    }
-  }
-
-  .non-responsive {
-    .globalfooter {
-      background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
     }
   }
 }
