--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -2,20 +2,6 @@
 // KU misc.
 // Various extra classes that don't belong in other .less files
 // ---------------------------------------------------------------
-// KU adding margins to rows and columns
-
-html:not(.non-responsive) {
-  .main-content {
-    @media (max-width: @screen-xs-max) {
-      width: 100%; // Overriding Bootstrap's grid system
-    }
-  }
-}
-//.right-side {
-// @media (min-width: @screen-xs-max) and (max-width: @screen-md-min) {
-//   .pull-right();
-// }
-//}
 // Main content part
 
 #pagewrapper {
@@ -194,13 +180,20 @@ nav {
     background-image: none; // remove gradient from default button
   }
 }
-// Global scroll to top
+// Content jump to tooltip-opacity
 
+.to-top {
+  font-size: 18px;
+  color: @ku-jump-to-top;
+  margin: 4px 0 4px 5px;
+  .glyphicon;
+  .glyphicon-menu-up;
+}
+
+// Global scroll to top
 .scrolltop {
-  opacity: 0;
-  transition: opacity 0.4s ease-in;
   position: fixed;
-  bottom: 4%;
+  bottom: 3%;
   right: 2%;
   width: 40px;
   height: 40px;
@@ -229,10 +222,6 @@ nav {
   &:hover {
     cursor: pointer;
   }
-
-  &.fadeIn {
-    opacity: 1;
-  }
 }
 // KU loading symbol
 @keyframes ku-loading {
@@ -246,16 +235,16 @@ nav {
 }
 
 .ku-loading {
-  border-bottom: 6px solid @gray;
-  border-left: 6px solid @gray;
-  border-right: 6px solid @gray;
-  border-top: 6px solid @ku-red;
+  border-bottom: 3px solid @gray;
+  border-left: 3px solid @gray;
+  border-right: 3px solid @gray;
+  border-top: 3px solid @ku-red;
   border-radius: 100%;
-  height: 50px;
-  width: 50px;
+  height: 25px;
+  width: 25px;
   animation: ku-loading 0.6s infinite linear;
   overflow: auto;
   position: absolute;
-  top: 37%;
-  left: 40%;
+  top: 50%;
+  left: 50%;
 }
