--- a/less/navs.less
+++ b/less/navs.less
@@ -102,34 +102,35 @@
 // Give the tabs something to sit on
 
 .nav-tabs {
-  // border-bottom: 1px solid @nav-tabs-border-color;
+  border-bottom: 1px solid @nav-tabs-border-color;
   > li {
     float: left;
     // Make the list-items overlay the bottom border
     margin-bottom: -1px;
+
     // Actual tabs (as links)
     > a {
       color: @text-color;
-      background-color: @nav-tabs-bg-color;
-      border-radius: @nav-link-border-radius;
-
+      margin-right: 2px;
+      line-height: @line-height-base;
+      border: 1px solid transparent;
+      border-radius: @border-radius-base @border-radius-base 0 0;
       &:hover {
         background-color: @ku-nav-tabs-and-pills-hover-bg-color
+        //border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
       }
     }
+
     // Active state, and its :hover to override normal :hover
     &.active > a {
       &,
-      &:focus,
-      &:hover {
-        color: @nav-tabs-active-link-hover-color;
+      &:hover,
+      &:focus {
         background-color: @nav-tabs-active-link-hover-bg;
+        border: 1px solid @nav-tabs-active-link-hover-border-color;
+        border-bottom-color: transparent;
         cursor: default;
       }
-    }
-
-    + li {
-      margin-left: 2px;
     }
   }
   // pulling this in mainly for less shorthand
@@ -138,6 +139,7 @@
     .nav-tabs-justified();
   }
 }
+
 // Pills
 // -------------------------
 
