--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -21,12 +21,13 @@ html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   height: 100%;
-  // @media (max-width: @screen-sm-min) {
-  //   overflow-x: hidden;
-  // }
+}
 
-  &.non-responsive {
-    overflow: auto;
+html:not(.non-responsive) {
+  .main-content {
+    @media (max-width: @screen-xs-max) {
+      width: 100%; // Overriding Bootstrap's grid system
+    }
   }
 }
 
@@ -113,7 +114,7 @@ img {
   border-radius: @thumbnail-border-radius;
   transition: all 0.2s ease-in-out;
   // Keep them at most 100% wide
-  .img-responsive(inline-block);
+  .img-responsive(block);
 }
 // Perfect circle
 
